--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Database
-spring.datasource.url=${db_url}
-spring.dataSource.username=${db_username}
-spring.dataSource.password=${db_password}
+spring.datasource.url=jdbc:mysql://localhost:3308/eNaukriJob?createDatabaseIfNotExist=true
+spring.dataSource.username=root
+spring.dataSource.password=
 server.port=8081
 spring.jpa.database=MYSQL
 spring.jpa.hibernate.ddl-auto=update
@@ -17,9 +17,9 @@ logging.level.org.springframework.web=DEBUG
 
 #smtp mail properties
 spring.mail.host=smtp-relay.sendinblue.com
-spring.mail.port=${smtp_port}
-spring.mail.username=${smtp_username}
-spring.mail.password= ${smtp_password}
+spring.mail.port=587
+spring.mail.username=harmanjyot.singh@chicmic.co.in
+spring.mail.password= IXKc0bCpLhGfNqkr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
