--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,10 @@
 			<type>pom</type>
 		</dependency>
 
-
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--		</dependency>-->
 
 
 		<dependency>
@@ -184,6 +187,7 @@
 			<artifactId>jackson-databind</artifactId>
 			<!--			<version>${jackson.version}</version>-->
 		</dependency>
+
 	</dependencies>
 
 	<build>
