Implemented Job Post, Company Register , Employer Register , Employer and Employee Search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 #debug
-server.error.include-message=always
-server.error.include-binding-errors=always
+#server.error.include-message=always
+#server.error.include-binding-errors=always
 spring.jpa.show-sql=true
 spring.output.ansi.enabled=ALWAYS
 logging.level.org.springframework.web=DEBUG
