--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database
-spring.datasource.url=jdbc:mysql://localhost:3308/eNaukriJob?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3308/eNaukri?createDatabaseIfNotExist=true
 spring.dataSource.username=root
 spring.dataSource.password=
 server.port=8081
